--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description:        "live on chain"
 url:                ""
 author:             "Jonathan Yan"
 email:              "jontera@gmail.com"
-gravatar_hash:      "205e460b479e2e5b48aec07710c08d50"
+gravatar_hash:      "ce00d422cf358b1b8f0dded72e55c427"
 twitter:            "jonathanyan"
 email:              "jonathanyan@gmail.com"
 github:             "jonathanyan"
@@ -12,7 +12,7 @@ pinterest:          "jonathanyan"
 linkedin:           "jonathanyan"
 facebook:           "jonathanyan"
 
-disqus_shortname:   "thinker3197"
+disqus_shortname:   "jon"
 
 background:         "http://apple.wallpapersfine.com/wallpapers/original/1242x2208/w-5273.jpg"
 
